src/objects/QPMS__ComplaintJunction__c.object
<CustomObject>
    <description>This is junction for Complaint and other Objects</description>
    <fields>
        <fullName>QPMS__Access_Level__c</fullName>
        <description>This field is used to save Active value</description>
        <label>Access Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Read</fullName>
                </value>
                <value>
                    <fullName>Edit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Adverse_Events__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to save Adverse Events value</description>
        <label>Adverse Events</label>
        <referenceTo>QPMS__Complaint_Defect__c</referenceTo>
        <relationshipLabel>ComplaintJunction (Adverse Events)</relationshipLabel>
        <relationshipName>Complaint_Adverse_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__AuditName__c</fullName>
        <formula>QPMS__Audit__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AuditName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Audit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to save Audit value</description>
        <label>Audit</label>
        <referenceTo>QPMS__Audit__c</referenceTo>
        <relationshipLabel>ComplaintJunction</relationshipLabel>
        <relationshipName>ComplaintJunction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__CAPAName__c</fullName>
        <formula>QPMS__CAPA__r.QPMS__CAPA_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CAPAName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__CAPA_Name__c</fullName>
        <description>This field is used to store the capa value</description>
        <label>CAPA Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__CAPA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to save CAPA value</description>
        <label>CAPA</label>
        <referenceTo>QPMS__CAPA__c</referenceTo>
        <relationshipLabel>ComplaintJunction</relationshipLabel>
        <relationshipName>ComplaintJunction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Category__c</fullName>
        <description>This field is used to save Category value</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>val1</fullName>
                </value>
                <value>
                    <fullName>val2</fullName>
                </value>
                <value>
                    <fullName>val3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__Change_ManagementName__c</fullName>
        <formula>QPMS__Change_Management__r.QPMS__CR_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Change_ManagementName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Change_Management__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to save Change Management value</description>
        <label>Change Management</label>
        <referenceTo>QPMS__Change_Management__c</referenceTo>
        <relationshipLabel>ComplaintJunction</relationshipLabel>
        <relationshipName>ComplaintJunction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__ComplaintChildName__c</fullName>
        <formula>QPMS__ComplaintChild__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ComplaintChildName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__ComplaintChild__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to save Complaint Child value</description>
        <label>ComplaintChild</label>
        <referenceTo>QPMS__Complaint__c</referenceTo>
        <relationshipLabel>ComplaintJunction (Complaint)</relationshipLabel>
        <relationshipName>ComplaintJunction1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__ComplaintParentName__c</fullName>
        <formula>QPMS__Complaint__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ComplaintParentName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Complaint_General_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store Complaint General Task reference value</description>
        <label>Investigation</label>
        <referenceTo>QPMS__Complaint_General_Task__c</referenceTo>
        <relationshipLabel>ComplaintJunction</relationshipLabel>
        <relationshipName>ComplaintJunction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Complaint_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to store Product problem and Adverse event codes</description>
        <label>Complaint Product</label>
        <referenceTo>QPMS__Complaint_Product__c</referenceTo>
        <relationshipLabel>ComplaintJunction</relationshipLabel>
        <relationshipName>ComplaintJunction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Complaint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to save Complaint Parent value</description>
        <label>Complaint</label>
        <referenceTo>QPMS__Complaint__c</referenceTo>
        <relationshipLabel>ComplaintJunction</relationshipLabel>
        <relationshipName>ComplaintJunction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__DocumentProfileName__c</fullName>
        <formula>QPMS__Document_Profile__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DocumentProfileName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Document_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to save Document Profile value</description>
        <label>Document Profile</label>
        <referenceTo>QPMS__Document_Profile__c</referenceTo>
        <relationshipLabel>ComplaintJunction</relationshipLabel>
        <relationshipName>ComplaintJunction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Group_Id__c</fullName>
        <description>This field is used to save Group Id value</description>
        <label>Group Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Malfunction_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to save Malfunction Code value</description>
        <label>Malfunction Code</label>
        <referenceTo>QPMS__Complaint_Defect__c</referenceTo>
        <relationshipLabel>Complaint_Malfunction_Codes</relationshipLabel>
        <relationshipName>ComplaintJunction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Non_ConformanceName__c</fullName>
        <formula>QPMS__Non_Conformance__r.QPMS__Non_Conformance_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Non-ConformanceName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Non_Conformance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to save Non-Conformance value</description>
        <label>Non-Conformance</label>
        <referenceTo>QPMS__Non_Conformance__c</referenceTo>
        <relationshipLabel>ComplaintJunction</relationshipLabel>
        <relationshipName>ComplaintJunction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__RegistrationName__c</fullName>
        <formula>QPMS__Registration__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RegistrationName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QPMS__Registration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to save Registration value</description>
        <label>Registration</label>
        <referenceTo>QPMS__Registration__c</referenceTo>
        <relationshipLabel>ComplaintJunction</relationshipLabel>
        <relationshipName>ComplaintJunction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QPMS__Type__c</fullName>
        <description>This field is used to save Type value</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reference</fullName>
                </value>
                <value>
                    <fullName>Adverse Event Codes</fullName>
                </value>
                <value>
                    <fullName>Product Problem Codes</fullName>
                </value>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QPMS__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to save User value</description>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ComplaintJunction</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ComplaintJunction</label>
    <listViews>
        <fullName>QPMS__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CJ-{00000}</displayFormat>
        <label>ComplaintJunction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ComplaintJunction</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>